completed All CSS properties

--- a/Practice/index.html
+++ b/Practice/index.html
@@ -17,6 +17,7 @@
             <div class="dropdown-content">
                 <a href="#">MES Software</a>
                 <a href="#">MES foundry</a>
+                <a href="#">MES Service</a>
             </div>
         </div>
     </nav>
